--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+
 body {
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -35,17 +40,18 @@ body {
 select,
 select option,
 select::-ms-expand {
-  color: #ff7d7dff; /* option text color */
+  color: #000;
+  /* option text color */
 }
 
 /* For Firefox */
 select:-moz-focusring {
   color: transparent;
-  text-shadow: 0 0 0 #f47979ff;
+  text-shadow: 0 0 0 #000;
 }
 
 /* Utility to force option colors inside custom dropdowns */
 .dropdown-option-white option,
 .dropdown-option-white select {
-  color: #ff7a7aff;
+  color: #000;
 }
